--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Welcome</title>
 </head>
 <body>
-    <h1>Hello from GitHub Pages!</h1>
+    <h1>Hello world! Welcome to the Phanopoulos Lab</h1>
+    We are a combined experimental/computational group with an interest in designing and synthesising new compounds that contain metal–metal bonds, understanding the nature of these bonds and leveraging this understanding for catalysis.
 </body>
 </html>
